Lab3/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-8-oracle/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/usr/share/bluej/bluejcore.jar:/usr/share/bluej/junit-4.11.jar:/usr/share/bluej/hamcrest-core-1.3.jar:/usr/share/bluej/lang-stride.jar:/usr/share/bluej/userlib/pi4j-core.jar:/usr/share/bluej/userlib/pi4j-service.jar:/usr/share/bluej/userlib/pi4j-device.jar:/usr/share/bluej/userlib/pi4j-gpio-extension.jar:/home/midr/Dropbox/DOCENCIA/POOB-2022-02/JAVA/HERENCIA/replicate/replicate
-d
/home/midr/Dropbox/DOCENCIA/POOB-2022-02/JAVA/HERENCIA/replicate/replicate/doc
-encoding
UTF-8
-charset
UTF-8
/home/midr/Dropbox/DOCENCIA/POOB-2022-02/JAVA/HERENCIA/replicate/replicate/presentation/AManufacturingGUI.java
<---- end of javadoc command ---->
Loading source file /home/midr/Dropbox/DOCENCIA/POOB-2022-02/JAVA/HERENCIA/replicate/replicate/presentation/AManufacturingGUI.java...
Constructing Javadoc information...
/home/midr/Dropbox/DOCENCIA/POOB-2022-02/JAVA/HERENCIA/replicate/replicate/presentation/AManufacturingGUI.java:15: error: cannot find symbol
    private PhotoManufacturing photo;
            ^
  symbol:   class PhotoManufacturing
  location: class AManufacturingGUI
Standard Doclet version 1.8.0_201
Building tree for all the packages and classes...
Generating /home/midr/Dropbox/DOCENCIA/POOB-2022-02/JAVA/HERENCIA/replicate/replicate/doc/presentation/AManufacturingGUI.html...
Generating /home/midr/Dropbox/DOCENCIA/POOB-2022-02/JAVA/HERENCIA/replicate/replicate/doc/presentation/PhotoAManufacturing.html...
Generating /home/midr/Dropbox/DOCENCIA/POOB-2022-02/JAVA/HERENCIA/replicate/replicate/doc/presentation/package-frame.html...
Generating /home/midr/Dropbox/DOCENCIA/POOB-2022-02/JAVA/HERENCIA/replicate/replicate/doc/presentation/package-summary.html...
Generating /home/midr/Dropbox/DOCENCIA/POOB-2022-02/JAVA/HERENCIA/replicate/replicate/doc/constant-values.html...
Generating /home/midr/Dropbox/DOCENCIA/POOB-2022-02/JAVA/HERENCIA/replicate/replicate/doc/serialized-form.html...
Building index for all the packages and classes...
Building index for all classes...
Generating /home/midr/Dropbox/DOCENCIA/POOB-2022-02/JAVA/HERENCIA/replicate/replicate/doc/allclasses-frame.html...
Generating /home/midr/Dropbox/DOCENCIA/POOB-2022-02/JAVA/HERENCIA/replicate/replicate/doc/allclasses-noframe.html...
Generating /home/midr/Dropbox/DOCENCIA/POOB-2022-02/JAVA/HERENCIA/replicate/replicate/doc/index.html...
1 warning
